2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro): Replace 0 with ZERO in macro_build
	and move_register calls referring to $0.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro, mips_ip): Correct message
	capitalization.

2010-12-09  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* config/tc-z80.c (md_apply_fix): Rename var to fix shadow warning.

2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro_build, macro, mips_ip, md_apply_fix):
	Fix formatting.

2010-12-09  Mike Frysinger  <vapier@gentoo.org>

	* .gitignore: New file.

2010-12-05  Arnold Metselaar  <arnold.metselaar@planet.nl>

	PR gas/12269
	* config/tc-z80.c (emit_mx, emit_ldxhl): Do not use
	symbol_get_value_expression on a symbol that may not yet have
	a value.
	* testsuite/gas/z80/atend.s: New file, test case for bug 12269,
	provided by Chris Smith.
	* testsuite/gas/z80/atend.d: New file, expected results for atend.s.
	* testsuite/gas/z80/z80.exp: Run new test case.

2010-12-04  Maciej W. Rozycki  <macro@codesourcery.com>

	PR gas/12282
	* expr.c (expr_build_dot): Make a clone of the symbol to return if
	needed.

2010-12-02  Richard Sandiford  <richard.sandiford@linaro.org>

	* symbols.c (S_FORCE_RELOC): Return true for indirect functions
	even if !strict.
	* expr.c (operand): Don't convert absolute symbols to constants
	if S_FORCE_RELOC is true.
	(expr): Only reduce subtractions between different symbols if
	S_FORCE_RELOC is false for both of them.
	* write.c (fixup_segment): Don't remove symbols if S_FORCE_RELOC
	is true for them, regardless of their segment.

2010-12-01  Maciej W. Rozycki  <macro@codesourcery.com>

	* symbols.h (dot_symbol): New declaration.
	(dot_symbol_init): New prototype.
	* symbols.c (dot_symbol): New variable.
	(symbol_clone): Assert it's not dot_symbol being cloned.
	(dot_symbol_init): New function.
	(symbol_clone_if_forward_ref): Create a new temporary symbol